--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <iframe height="400" width="100%" frameborder="no" src="https://nmelzer.shinyapps.io/clarity/"> </iframe>
+<meta name="googlebot" content="noindex,indexifembedded"/>
