--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<iframe height="400" width="100%" frameborder="no" src="https://nmelzer.shinyapps.io/clarity/"> </iframe>
+<link href="https://www.nmelzer.shinyapps.io/clarity" rel="canonical">
 <meta name="googlebot" content="noindex,indexifembedded"/>
