--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<link href="https://www.nmelzer.shinyapps.io/clarity" rel="canonical">
+<link href="https://nmelzer.shinyapps.io/clarity" rel="canonical">
 <meta name="googlebot" content="noindex,indexifembedded"/>
